[package]
name = "upload-symbols"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "sync", "time"] }
url = "2.5.8"
walkdir = "2.5.0"
zip = "8.5.1"
