[package]
name = "download-symbols"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "json"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
