[package]
name = "upload-symbols"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tempdir = { path = "../tempdir" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "sync", "time"] }
url = "2.5.8"
walkdir = "2.5.0"
zip = "8.5.1"

[dev-dependencies]
fake-tecken = { path = "../fake-tecken" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[features]
local-upload-test = []
