[package]
name = "upload-symbols"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, optional = true }
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
serde = { workspace = true }
tempdir = { path = "../tempdir" }
thiserror = "2.0.18"
tokio = { workspace = true, features = ["rt", "sync", "time"] }
url = { workspace = true }
walkdir = "2.5.0"
zip = { workspace = true }

[dev-dependencies]
fake-tecken = { path = "../fake-tecken" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
clap = ["dep:clap"]
local-upload-test = []
